<resources>
    <string name="app_name">MobileTipster</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Alan Himes, P2, Mobile Tipster</string>
    <string name="bill">Amount of Bill:</string>
    <string name="diners">Number of Diners:</string>
    <string name="percent">Custom %</string>
    <string name="percent_default_a">15%</string>
    <string name="percent_default_b">Custom%</string>
    <string name="tip">Tip Amount:</string>
    <string name="total">Total with Tip:</string>
    <string name="share">Each Diner Share:</string>
    <string name="reset">Reset</string>
</resources>
